[package]
name = "rustycopier"
version = "0.1.0"
edition = "2021"
authors = ["Carlos Jorge <rodriguezcuelloc@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool copy data"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm="0.27.0"
tempdir = "0.3.7"
rayon = "1.7"
clap = { version = "4.0", features = ["derive"] }
anyhow="1.0.75"
assert_fs = "1.0.13"
[dev-dependencies]
criterion="0.5.1"

[[bench]]
name="coping_benchmark"
harness=false
