[package]
name = "rustycopier"
version = "0.2.0"
edition = "2021"
authors = ["Carlos Jorge <rodriguezcuelloc@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A tool copy data"
readme = "README.md"
homepage = "https://github.com/carlosjorger/rustycopier"
repository = "https://github.com/carlosjorger/rustycopier"
keywords = ["cli", "copy", "demo"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm="0.27.0"
rayon = "1.7"
clap = { version = "4.0", features = ["derive", "cargo", "env"] }
anyhow="1.0.75"
assert_fs = "1.0.13"
indicatif="0.17.6"
[dev-dependencies]
criterion="0.5.1"

[[bench]]
name="coping_benchmark"
harness=false

[build-dependencies]
clap_mangen = "0.2.13"
clap = { version = "4.0", features = ["derive", "cargo", "env"] }


